# BatVault_Memory_V2_Public

./: .dockerignore  .env.example  .gitattributes  .gitignore  README  README_Gateway Decision Query System  README_explanations  README_test_run_sheet  README_tests  TODO  audit_2.md  audit_core_packages.md  check_timeline.py  code_analysis.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  docker.compose.yml  fix_tests.md  gaps.md  ideas_for_presention.md  memory.tar  notes.txt  operational_files_classification.md  presentation_doc.md  project_development_milestones.md  prompts.txt  pytest.ini  sitecustomize.py  stage_1_updated.md  story.md  strategy_doc.md  system_requirements&system_matrix.md  target.md  test_commands.md  verify_receipt.py
.github/workflows/: ci.yml
audits/: audit.md  audit1.md  audit2.md  audit3.md  audit_api_edge.md  audit_gateway.md  audit_ingest.md  audit_memory_api.md  audit_packages.md  audit_performance_integration.md
batvault_frontend/: .dockerignore  dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
batvault_frontend/e2e/: memory.spec.ts
batvault_frontend/scripts/: gen_jsonschema_types.mjs  gen_openapi_sdk.mjs  openapi_check.mjs
batvault_frontend/src/: App.tsx  main.tsx  traceGlobals.ts
batvault_frontend/src/config/: runtime.ts  schema.ts
batvault_frontend/src/hooks/: useAliasResolver.ts  useEnrichedCatalog.ts  useMemoryAPI.ts  useSSE.ts  useSchema.ts
docs/: codebase_structure.md  commands.md  core-spec.md  db_bootstrap.md  milestone_reqs_to_test_map.md  project_development_milestones.md  requirements_checklist.md  requirements_to_milestone_mapping.md  tech-spec.md  unified_config_constants.md
memory/fixtures/: decisions.json  edges.json  events.json  readme.md  sample_node.json  test_node.json
memory_old/: test_node.json
ops/: README_arangosearch.md  bootstrap.py  bootstrap_arango.sh  bootstrap_arangosearch.py
ops/docker/: Dockerfile.bootstrap  Dockerfile.dev  Dockerfile.python
ops/otel/: otel-collector-config.yaml
ops/prometheus/: alerts.yml  prometheus.yml
ops/secrets/: gateway_signing_seed_b64
patches/: notes_ms3
patches/overall/: analysis.md  patch_0.md  patch_1.md  patch_2.md  patch_3.md
patches/stage_2/: patch_1  patch_2  patch_3  patch_4  patch_5  patch_6  test_errors.txt
patches/stage_3/: feedback.md  patch_0.md  patch_1.md  patch_10.md  patch_11.md  patch_2.md  patch_3.md  patch_4.md  patch_5.md  patch_6.md  patch_7.md  patch_8.md  patch_9.md
policy/opa/: batvault.rego  roles.json
policy/roles/: role-analyst.json  role-ceo.json  role-director.json  role-manager.json  role-staff.json
public/keys/: gateway_ed25519_pub.b64  gateway_ed25519_pub.pem
requirements/: dev.txt  runtime.txt
scripts/: bootstrap_min.sh  build_frontend.sh  check_codegen_sync.sh  check_import_deps.py  codegen_schemas.sh  dev_bootstrap.sh  dev_env.sh  dev_install.sh  dump_openapi.py  ensure_codegen_venv.sh  force_clean_pycache.sh  gen_anchor_regex.mjs  generate_ed25519_keypair.py  install_all.sh  policy_smoke.py  policy_smoke.sh  proof_of_work_curls.sh  schema_compat_check.py  smoke.sh  split_seed_bundle.py  sync_env_frontend.py  verify_receipt.py
services/api-edge/: pyproject.toml
services/api-edge/api-edge/src/: __main__.py  app.py
services/api_edge/: __init__.py  pyproject.toml
services/api_edge/src/api_edge/: __main__.py  app.py
services/api_edge/tests/: test_api_edge_health.py
services/gateway/: .env.example  pyproject.toml
services/gateway/config/: policy_registry.json
services/gateway/src/gateway/: __init__.py  __main__.py  app.py  budget_gate.py  builder.py  evidence.py  http.py  inference_router.py  intent_router.py  llm_client.py  llm_router.py  load_shed.py  logging_helpers.py  match_snippet.py  metrics.py  models.py  orientation.py  prom_metrics.py  prompt_envelope.py  prompt_messages.py  redis.py  router.py  schema_cache.py  selector.py  signing.py  sse.py  template_registry.py  templater.py  validator.py
services/gateway/src/gateway/config/: answer_templates.default.json
services/gateway/src/gateway/llm/: __init__.py
services/gateway/src/gateway/llm_adapters/: __init__.py  tgi.py  vllm.py
services/gateway/src/gateway/resolver/: __init__.py  embedding_model.py  fallback_search.py  reranker.py
services/gateway/tests/: __init__.py  test_gateway_schema_mirror.py  test_health.py  test_selector.py  test_templater_ask.py  test_validator.py
services/ingest/: pyproject.toml
services/ingest/schemas/json-v2/: event.schema.json  transition.schema.json
services/ingest/src/ingest/: __main__.py  app.py  cli.py  watcher.py
services/ingest/src/ingest/catalog/: field_catalog.py
services/ingest/src/ingest/pipeline/: derive_links.py  graph_upsert.py  normalize.py  snippet_enricher.py
services/ingest/src/ingest/schemas/json_v2/: alias_edge.schema.json  decision.schema.json  transition.schema.json
services/ingest/tests/: test_backlink_derivation.py  test_contract_orphans.py  test_field_catalog_alias_learn.py  test_graph_upsert_idempotent.py  test_strict_id_timestamp.py
services/memory-api/: pyproject.toml
services/memory-api/src/memory-api/: app.py
services/memory_api/: pyproject.toml
services/memory_api/src/memory/: embeddings_client.py
services/memory_api/src/memory_api/: __main__.py  app.py  embeddings_client.py  policy.py
services/memory_api/tests/: test_expand_and_resolve_contracts.py  test_memory_api_health.py
tests/: conftest.py
tests/golden/: test_exec_summary_golden.py
tests/helpers/: memory_api_stub.py
tests/integration/: test_evidence_truncation_limits.py  test_milestone4_loadshed_and_meta.py  test_missing_coverage.py
tests/observability/: test_log_trace_correlation.py  test_metrics_exemplars.py  test_trace_headers.py
tests/ops/: test_metrics_smoke.py  test_prom_alert_metric_names.py
tests/performance/: test_model_inference_speed.py
tests/policy_vectors/: test_opa_externalized.py  test_x_extra_and_acl.py
to_check_artefacts/: complete_file_list.md  env_variables_overview.md  obsv_gaps.md
(+183 files in other folders)
