[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_edge"
version = "0.1.0"
description = "API Edge service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "minio>=7.2.7",
  "core_config",
  "core_logging",
  "core_utils",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["api_edge*"]

[tool.ruff]
line-length = 100
