[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_edge"
version = "0.1.0"
description = "API Edge service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "httpx>=0.27.0",
  "core_metrics",
  "core_config",
  "core_logging",
  "core_http",
  "core_observability",
  "core_utils",
  "shared",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-http>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.46b0", 
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-env>=0.8",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["api_edge*"]

[tool.ruff]
line-length = 100
