[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.1.0"
description = "Gateway and prompt/evidence coordinator"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "orjson>=3.9.7",
  "redis>=5.0.3",
  "prometheus-client>=0.19.0",
  "fastapi>=0.112.0",
  "numpy>=1.26.4",
  "anyio>=3.7.1", 
  "sentence-transformers>=2.7.0",    # embeddings (optional at runtime)
  "core_config",
  "core_logging",
  "core_observability",
  "core_storage",
  "core_http",
  "core_metrics",
  "core_utils",
  "core_validator",
  "shared",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-http>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-redis>=0.46b0",
  "httpx>=0.27.0",
  "redis>=5.0.3",
  "core_http",
  "core_ml",
  "pydantic>=2.7.0",
  "orjson>=3.9.7",
  "minio>=7.2.7",
  "argon2-cffi>=23.2",
  "argon2-cffi-bindings>=21.2",
  "cffi>=1.16",
  "pycryptodome>=3.15.0",
  "core_config",
  "core_logging",
  "core_observability",
  "core_utils",
  "core_validator",
  "shared",
  "blake3>=0.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-env>=0.8",
  "httpx>=0.27.0",
  "fakeredis>=2.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gateway*"]

[tool.ruff]
line-length = 100
