[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.1.0"
description = "Gateway and prompt/evidence coordinator"
requires-python = ">=3.11"

dependencies = [
  # Web framework & ASGI middleware
  "fastapi>=0.112.0",
  "pydantic>=2.7.0",
  "cryptography>=42.0.0",
  "PyNaCl>=1.5",
  "transformers>=4.44.2",
  "torch>=2.2.0",

  # Time parsing
  "python-dateutil>=2.9.0",

  # Concurrency and networking
  "anyio>=3.7.1",
  "httpx>=0.27.0",
  "redis>=5.0.3",

  # Metrics and serialization
  "prometheus-client>=0.19.0",
  "orjson>=3.9.7",

  # Storage and cryptography – required by MinIO and its admin helpers
  "minio>=7.2.7",
  "argon2-cffi>=23.2",
  "argon2-cffi-bindings>=21.2",
  "cffi>=1.16",
  "pycryptodome>=3.15.0",

  # Observability & tracing
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-http>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-redis>=0.46b0",

  # Internal packages
  "core_config",
  "core_logging",
  "core_observability",
  "core_storage",
  "core_http",
  "core_metrics",
  "core_utils",
  "core_models",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-env>=0.8",
  "httpx>=0.27.0",
  "fakeredis>=2.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gateway*"]

[tool.ruff]
line-length = 100
