[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest"
version = "0.1.0"
description = "Memory ingest + validation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "jsonschema>=4.22.0",
  "python-dateutil>=2.9.0",
  "core_config",
  "core_logging",
  "core_utils",
  "core_storage",
  "link_utils",
  "core_validator",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingest*"]

[tool.ruff]
line-length = 100
