[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest"
version = "0.1.0"
description = "Memory ingest + validation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "httpx>=0.27.0",
  "redis>=5.0.3",
  "core_http",
  "core_config",
  "core_logging",
  "core_observability",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-http>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "core_metrics",
  "core_utils",
  "core_models",
  "core_validator",
  "redis>=5.0.3",
  "minio>=7.2.7",
  "orjson>=3.9.7",
  "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
   "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-env>=0.8",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingest*"]

[tool.ruff]
line-length = 100
