[project]
name = "memory_api"
version = "0.1.0"
description = "Graph + search API over Arango"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "redis>=5.0.3",
  "pydantic>=2.7.0",
  "orjson>=3.9.7",
  "python-arango>=7.9.1",
  "minio>=7.2.7",
  "core-config",
  "core-logging",
  "core-models",
  "core-utils",
  ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["memory_api*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = [".", "src"]
