[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory_api"
version = "0.1.0"
description = "Graph + search API over Arango"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "core_config",
  "core_logging",
  "core_observability",
  "core_storage",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-http>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.46b0",  
  "shared",
  "prometheus-client>=0.19.0",
  "core_utils",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["memory_api*"]

[tool.ruff]
line-length = 100
